2002-09-05  Ken Kocienda  <kocienda@apple.com>

        The first use of the WebResourceResponse object. This is just a baby step, though.
        I only use one variable in the new class, the statusCode, but all the code in
        the framework has been updated to use the statusCode from the response object.

	Each of these methods was modified to call through to a WebResourceResponse to get 
	the status code.

        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (-[WebSubresourceClient handleDidFinishLoading:])
        * WebView.subproj/WebLoadProgress.m:
        (-[WebLoadProgress initWithResourceHandle:])
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handleDidFinishLoading:])

2002-09-05  Richard Williamson (Local)  <rjw@apple.com>
        
        Only disable timed expiration of CG glyph cache if SPI is available.
        (per Bertrand's request)
        
        * WebCoreSupport.subproj/WebTextRendererFactory.m:

2002-09-05  John Sullivan  <sullivan@apple.com>

        * Resources/url_icon.tiff: New generic icon from Steve Lemay.
	The @ sign lives, but does not spring.

2002-09-04  Darin Adler  <darin@apple.com>

	One more pass of refinement on that last change.

        * History.subproj/WebBackForwardList.m: (-[WebBackForwardList addEntry:]):
	Replace the last entry instead of just ignoring if this one matches.

        * History.subproj/WebHistoryList.h: Add replaceEntryAtIndex. Remove addURL: and removeURL:.

        * History.subproj/WebHistoryList.m:
        (-[WebHistoryList addEntry:]): Call removeEntry: rather than using an entire pasted copy here.
        (-[WebHistoryList removeEntry:]): Use a hash of the URL and the URL rather than relying on the
	fact that WebHistoryItem hashes and does isEqual based on the URL only.
        (-[WebHistoryList replaceEntryAtIndex:withEntry:]): Added. Used by the code above.

2002-09-04  Darin Adler  <darin@apple.com>
